# desktop_cube

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  bt_app_av.c  bt_app_av.h  bt_app_core.c  bt_app_core.h  get_time_and_weather.c  get_time_and_weather.h  idf_component.yml  main.c  myadc.c  myadc.h  myuart.c  myuart.h  oneshot_read_main.c  sd_card_example_main.c  spi_lcd_touch_example_main.c
